# libkgeomap

./: AUTHORS  CMakeLists.txt  Messages.sh  README  TODO  kmap2kgeomap-TODO.txt  libkgeomap.lsm.cmake  libkgeomap.pc.cmake  libkmap.lsm.cmake  libkmap.pc.cmake  whatsthis.txt
backend-data/: backend-googlemaps-js.js  backend-osm-js.js  backend-test.html
backend-googlemaps/: backend-googlemaps.cpp  backend-googlemaps.h  backend-googlemaps.html  bgm_widget.cpp  bgm_widget.h
backend-marble/: backend-marble.cpp  backend-marble.h  bm-widget.cpp  bm-widget.h
backend-osm/: backend-osm-js.js  backend-osm-test.html  backend-osm.cpp  backend-osm.h  backend-osm.html
calibrator/: CMakeLists.txt  calibrator.cpp  calibrator.h
cmake/modules/: FindKGeoMap.cmake  FindKmap.cmake  FindMarbleWidget.cmake
cmake/templates/: KF5KGeoMapConfig.cmake.in  (+2 more)
data/: CMakeLists.txt  backend-googlemaps-js.js  backend-googlemaps.html  backend-osm-js.js  backend-test.html
demo/: CMakeLists.txt  demo-main.cpp  dragdrophandler.cpp  dragdrophandler.h  main.cpp  mainwindow.cpp  mainwindow.h  myimageitem.cpp  myimageitem.h  mytreewidget.cpp  mytreewidget.h
demo-widget/: demo-main.cpp  mainwindow.cpp  mainwindow.h
lib/: altitude-backend.cpp  altitude-backend.h  backend-altitude-geonames.cpp  backend-altitude-geonames.h  backend-googlemaps.cpp  backend-googlemaps.h  backend-marble-layer.cpp  backend-marble-layer.h  backend-marble-subwidget.cpp  backend-marble.cpp  backend-marble.h  backend-osm.cpp  backend-osm.h  bm-widget.cpp  html_widget.cpp  html_widget.h  map-backend.cpp  map-backend.h  markermodel.cpp  markermodel.h  worldmapwidget2.cpp  worldmapwidget2.h  worldmapwidget2_dragdrophandler.cpp  worldmapwidget2_primitives.cpp  worldmapwidget2_primitives.h
lib-data/: backend-googlemaps-js.js  backend-osm-js.js  backend-test.html
libkgeomap/: CMakeLists.txt  Doxyfile  Mainpage.dox  abstractmarkertiler.cpp  abstractmarkertiler.h  backend_map.cpp  backend_map.h  backend_map_googlemaps.cpp  backend_map_googlemaps.h  backend_map_marble.cpp  backend_map_marble.h  backend_map_marble_layer.cpp  backend_map_marble_layer.h  backend_map_marble_subwidget.cpp  backend_map_marble_subwidget.h  backend_map_osm.cpp  backend_map_osm.h  dragdrophandler.cpp  dragdrophandler.h  geocoordinates.cpp  geocoordinates.h  html_widget.cpp  html_widget.h  itemmarkertiler.cpp  itemmarkertiler.h  kgeomap_common.cpp  kgeomap_common.h  kgeomap_primitives.cpp  kgeomap_primitives.h  kgeomap_widget.cpp  kgeomap_widget.h  kmap_common.cpp  kmap_common.h  kmap_primitives.h  kmap_widget.cpp  kmap_widget.h  libkgeomap_export.h  libkmap_export.h  lookup_altitude.cpp  lookup_altitude.h  (+19 more)
libkmap/: CMakeLists.txt  Doxyfile  Doxyfile-developer  Mainpage.dox  abstractmarkertiler.cpp  abstractmarkertiler.h  altitude-backend.cpp  altitude-backend.h  backend-altitude-geonames.cpp  backend-altitude-geonames.h  backend-googlemaps.cpp  backend-googlemaps.h  backend-marble-layer.cpp  backend-marble-layer.h  backend-marble-subwidget.cpp  backend-marble-subwidget.h  backend-marble.cpp  backend-marble.h  backend-osm.cpp  backend-osm.h  backend_altitude.cpp  backend_altitude.h  backend_altitude_geonames.cpp  backend_altitude_geonames.h  backend_helper.cpp  backend_helper.h  backend_map.cpp  backend_map.h  backend_map_googlemaps.cpp  backend_map_googlemaps.h  backend_map_marble.cpp  backend_map_marble_layer.cpp  backend_map_marble_layer.h  backend_map_marble_subwidget.cpp  backend_map_marble_subwidget.h  backend_map_osm.h  dragdrophandler.cpp  dragdrophandler.h  html_widget.cpp  html_widget.h  (+39 more)
libs/: altitude-backend.cpp  backend-altitude-geonames.cpp  backend-marble.cpp  map-backend.cpp  map-backend.h  markermodel.cpp  worldmapwidget2.cpp  worldmapwidget2.h  worldmapwidget2_dragdrophandler.h  worldmapwidget2_export.h  worldmapwidget2_primitives.cpp
src/: CMakeLists.txt  Doxyfile-developer  abstractmarkertiler.cpp  abstractmarkertiler.h  backend_map.cpp  backend_map.h  backend_map_googlemaps.cpp  backend_map_googlemaps.h  backend_map_marble.cpp  backend_map_marble.h  backend_map_marble_layer.cpp  backend_map_marble_layer.h  backend_map_marble_subwidget.cpp  backend_map_osm.cpp  backend_map_osm.h  dragdrophandler.cpp  dragdrophandler.h  geocoordinates.cpp  geocoordinates.h  groupstate.h  groupstatecomputer.cpp  groupstatecomputer.h  html_widget.cpp  html_widget.h  itemmarkertiler.cpp  itemmarkertiler.h  kgeomap_common.cpp  kgeomap_common.h  kgeomap_primitives.cpp  kgeomap_primitives.h  kgeomap_widget.cpp  kgeomap_widget.h  libkgeomap_debug.cpp  libkgeomap_debug.h  lookup_altitude.cpp  lookup_altitude.h  lookup_altitude_geonames.cpp  lookup_altitude_geonames.h  lookup_factory.cpp  lookup_factory.h  (+23 more)
src/backends/: CMakeLists.txt  backend_map_googlemaps.cpp  backend_map_googlemaps.h  backend_map_marble.cpp  backend_map_marble_layer.cpp  backend_map_marble_layer.h  backend_map_osm.cpp  backend_map_osm.h  backendgooglemaps.cpp  backendgooglemaps.h  backendmarble.cpp  backendmarble.h  backendmarblelayer.cpp  backendmarblelayer.h  backendosm.cpp  backendosm.h  html_widget.cpp  html_widget.h  htmlwidget.cpp  htmlwidget.h  mapbackend.cpp  mapbackend.h
test/: CMakeLists.txt  test-model.cpp  test-model.h  test-primitives.cpp  test-primitives.h  test_geocoordinates.cpp  test_geocoordinates.h  test_itemmarkertiler.cpp  test_itemmarkertiler.h  test_lookup_altitude_geonames.cpp  test_lookup_altitude_geonames.h  test_primitives.cpp  test_primitives.h  test_tileindex.cpp  test_tileindex.h  test_tracks.cpp
tests/: CMakeLists.txt  loadtrack.cpp  test-model.cpp  test-model.h  test-primitives.cpp  test-primitives.h  test_geocoordinates.cpp  test_geocoordinates.h  test_itemmarkertiler.cpp  test_itemmarkertiler.h  test_lookup_altitude_geonames.cpp  test_lookup_altitude_geonames.h  test_primitives.cpp  test_primitives.h  test_tileindex.cpp  test_tileindex.h  test_tracks.cpp  test_tracks.h
worldmapwidget2/: html_widget.cpp  html_widget.h  map-backend.cpp  map-backend.h  markermodel.cpp  markermodel.h  worldmapwidget2.cpp  worldmapwidget2.h  worldmapwidget2_primitives.h
