# ===========================================================
#
# This file is a part of digiKam project
# <a href="http://www.digikam.org">http://www.digikam.org</a>
#
# @date   2010-06-29
# @brief  world maps library interface for KDE
#
# @author Copyright (C) 2010 by Gilles Caulier
#         <a href="mailto:caulier dot gilles at gmail dot com">caulier dot gilles at gmail dot com</a>
# @author Copyright (C) 2009-2010 by Michael G. Hansen
#         <a href="mailto:mike at mghansen dot de">mike at mghansen dot de</a>
#
# This program is free software; you can redistribute it
# and/or modify it under the terms of the GNU General
# Public License as published by the Free Software Foundation;
# either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# ============================================================

INSTALL(FILES backend-osm.html
              backend-osm-js.js
              backend-googlemaps.html
              backend-googlemaps-js.js
              cluster-circle-00ff00.png
              cluster-circle-00ffff.png
              cluster-circle-ff0000.png
              cluster-circle-ff7f00.png
              cluster-circle-ffff00.png
              cluster-circle-00ff00-someselected.png
              cluster-circle-00ffff-someselected.png
              cluster-circle-ff0000-someselected.png
              cluster-circle-ff7f00-someselected.png
              cluster-circle-ffff00-someselected.png
              cluster-circle-00ff00-selected.png
              cluster-circle-00ffff-selected.png
              cluster-circle-ff0000-selected.png
              cluster-circle-ff7f00-selected.png
              cluster-circle-ffff00-selected.png
              marker-00ff00.png
              marker-00ffff.png
              marker-ff0000.png
              marker-ff7f00.png
              marker-ffff00.png
              marker-00ff00-someselected.png
              marker-00ffff-someselected.png
              marker-ff0000-someselected.png
              marker-ff7f00-someselected.png
              marker-ffff00-someselected.png
              marker-00ff00-selected.png
              marker-00ffff-selected.png
              marker-ff0000-selected.png
              marker-ff7f00-selected.png
              marker-ffff00-selected.png
              marker-icon-16x16.png
        DESTINATION ${DATA_INSTALL_DIR}/libkmap/)
